syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/maxuanquang/social-network/pkg/types/proto/pb/newsfeed_publishing";
package newsfeed_publishing;

service NewsfeedPublishing {
	rpc PublishPost(PublishPostRequest) returns(PublishPostResponse) {}
}

message PublishPostRequest {
	int64 user_id = 1;
	int64 post_id = 2;
	google.protobuf.Timestamp created_at = 5;
}

message PublishPostResponse {
	enum PublishPostResponseStatus {
		OK = 0;
		FAILED = 1;
	}
	PublishPostResponseStatus status = 1;
}